--- a/BZAnalizer.csproj
+++ b/BZAnalizer.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Models\MainBlock.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ElementHandler.cs" />
     <Compile Include="Service\PDFAnalizer.cs" />
   </ItemGroup>
   <ItemGroup>
