--- a/packages.config
+++ b/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net48" />
+  <package id="EPPlus" version="8.0.1" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="6.0.0" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net48" />
   <package id="PdfPig" version="0.1.10" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.6.0" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net48" />
 </packages>
